# pk2cmd

./: .gitignore  .pre-commit-config.yaml  README.md
doc/: Readme-libusb.txt  ReadmeForPK2CMDLinux2-6.txt  ReadmeMakefile.txt  usbhotplug.txt
pk2cmd/: CMakeLists.txt  Makefile  PICkitFunctions.cpp  PICkitFunctions.h  hidpi.h
pk2cmd/inc/: DeviceData.h  DeviceFile.h  HID.hpp  ImportExportHex.h  P24F_PE.h  PIC32PE.h  PICkitFunctions.h  Pk2BootLoader.h  cmd_app.h  dsP33_PE.h  hidpi.h  hidsdi.h  hidusage.h  pk2usb.h  resource.h  stdafx.h  usb.h  usbhidioc.h
pk2cmd/src/: DeviceData.cpp  DeviceFile.cpp  ImportExportHex.cpp  P24F_PE.cpp  PIC32PE.cpp  PICkitFunctions.cpp  Pk2BootLoader.cpp  cmd_app.cpp  dsP33_PE.cpp  pk2cmd.cpp  pk2usb.cpp  pk2usbcommon.cpp  stdafx.cpp  strnatcmp.c  usbhidioc.cpp
